--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,14 @@
 Changelog
 =========
 
+Release 0.1.2
+-------------
+
+- Changed name of attribute ``WebSocket.websocket_closed`` to
+  ``WebSocket.closed``.
+- Changed behaviour of ``WebSocket.close()`` method. Doesn't close system
+  socket - it's still need by django!
+
 Release 0.1.1
 -------------
 
