Refactoring test project and making running test running egg_info writing requirements to django_websocket.egg-info/requires.txt writing django_websocket.egg-info/PKG-INFO writing top-level names to django_websocket.egg-info/top_level.txt writing dependency_links to django_websocket.egg-info/dependency_links.txt reading manifest file 'django_websocket.egg-info/SOURCES.txt' reading manifest template 'MANIFEST.in' writing manifest file 'django_websocket.egg-info/SOURCES.txt' running build_ext Creating test database 'default'... Creating table auth_permission Creating table auth_group_permissions Creating table auth_group Creating table auth_user_user_permissions Creating table auth_user_groups Creating table auth_user Creating table auth_message Creating table django_content_type Creating table django_session Creating table django_site Installing index for auth.Permission model Installing index for auth.Group_permissions model Installing index for auth.User_user_permissions model Installing index for auth.User_groups model Installing index for auth.Message model No fixtures found. Destroying test database 'default'... possible.

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ Release 0.1.2
   ``WebSocket.closed``.
 - Changed behaviour of ``WebSocket.close()`` method. Doesn't close system
   socket - it's still need by django!
+- You can run tests now with ``python setup.py test``.
 
 Release 0.1.1
 -------------
