--- a/README
+++ b/README
@@ -110,7 +110,10 @@ functionallity for normal GET requests::
 Contribute
 ==========
 
-Get the code at github: http://github.com/gregor-muellegger/django-websocket
+- Get the code from github: http://github.com/gregor-muellegger/django-websocket
+- Run tests with ``python setup.py test``.
+- Start coding :)
+- Send me a pull request or an email with a patch.
 
 Authors
 =======
