Adding WebSocket.has_messages()

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,8 @@ Release 0.1.2
 - Adding ``WebSocket.read()`` which returns ``None`` if no new messages are
   available intead of blocking like ``WebSocket.wait()``.
 - Adding example project to play around with.
+- Adding ``WebSocket.has_messages()``. You can use it to check if new messages
+  are ready to be processed.
 
 Release 0.1.1
 -------------
