--- a/README
+++ b/README
@@ -63,6 +63,11 @@ The ``read`` method will return either a new message if available or ``None``
 if no new message was received from the client. It is a non-blocking
 alternative to the ``wait()`` method.
 
+``WebSocket.has_messages()``
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Returns ``True`` if new messages are available, else ``False``.
+
 ``WebSocket.send(message)``
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
