--- a/CHANGES
+++ b/CHANGES
@@ -7,11 +7,11 @@ Release 0.2.0
 - Changed name of attribute ``WebSocket.websocket_closed`` to
   ``WebSocket.closed``.
 - Changed behaviour of ``WebSocket.close()`` method. Doesn't close system
-  socket - it's still need by django!
+  socket - it's still needed by django!
 - You can run tests now with ``python setup.py test``.
 - Refactoring ``WebSocket`` class.
 - Adding ``WebSocket.read()`` which returns ``None`` if no new messages are
-  available intead of blocking like ``WebSocket.wait()``.
+  available instead of blocking like ``WebSocket.wait()``.
 - Adding example project to play around with.
 - Adding ``WebSocket.has_messages()``. You can use it to check if new messages
   are ready to be processed.
