--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+Release 0.3.0
+-------------
+
+- Added multithreaded development server.
+
 Release 0.2.0
 -------------
 
